--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,6 @@
+[January 1, 2018][2.0.0]
++	Structure release. Will now generate from method or static data.
+
 [October 26, 2017][1.0.4]
 F	Fixed 3 crashes due to "not nullable variables".
 F	Will now verify if \data and \gen exists and create them if they don't.
-
-
-
